--- a/main.tex
+++ b/main.tex
@@ -254,11 +254,12 @@
   \node[anchor=south east, inner sep=8mm] at (current page.south east) {%
     \reflectbox{\includegraphics[height=0.3\paperheight]{images/toucan_bw.png}}%
   };
-  \node[anchor=south west, inner sep=10mm] at (current page.south west) {\large\sffamily\textcolor{black!60}\today};
+  \node[anchor=south west, inner sep=10mm] at (current page.south west)
+    {\large\sffamily Version 1.0 ``\textit{Tropical Toucan}''};
+  \node[anchor=south east, inner sep=10mm] at (current page.south east) {\large\sffamily\today};
   \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science project}};
   \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{an inductive learning approach}};
   \node[anchor=north, inner sep=5mm] at (subtitle.south) {\Large\sffamily\uppercase{Filipe A. N. Verri}};
-  \node[red,anchor=south, inner sep=11mm] at (current page.south) {\HUGE\sffamily WIP};
 \end{tikzpicture}
 
 \newpage
@@ -267,9 +268,7 @@
 
 {
   \footnotesize\noindent\color{red}
-  \textbf{Disclaimer:} This version is a work in progress.  Parts of the book have
-  been drafted with the help of \href{https://github.com/features/copilot}{GitHub Copilot}
-  and may not be revised yet by the author.  Proofreading and professional editing are
+  \textbf{Disclaimer:} This version is a work in progress.  Proofreading and professional editing are
   still pending.
 }
 
@@ -282,7 +281,7 @@ original and created with Ti\textit{k}Z.  Proudly written in
 \href{https://github.com/features/copilot}{GitHub Copilot}.
 Book cover image was created with the assistance of
 \href{https://gemini.google.com}{Gemini} and \href{https://openai.com/dall-e-2}{DALL·E 2}.
-We use the beautifule \href{https://www.stixfonts.org/}{STIX fonts} for text and math.
+We use the beautiful \href{https://www.stixfonts.org/}{STIX fonts} for text and math.
 }
 
 \vspace{0.5cm}
