Some typesetting changes.

--- a/about.tex
+++ b/about.tex
@@ -32,7 +32,7 @@ course) is that I only consider \emph{predictive methods}, more specifically ind
 ones.  I do not address topics such as clustering, association-rules mining, transductive
 learning, anomaly detection, time series forecasting, reinforced learning, etc.
 
-I expect my approach on the subject provide awareness of all steps in a data science
+I expect my approach on the subject to provide understanding of all steps in a data science
 project including a deeper focus on correct evaluation and validation of data science
 solutions.
 
@@ -94,6 +94,7 @@ I would like to thank the following contributors for their help in improving thi
 
 \begin{itemize}
   \itemsep0em
-  \item \texttt{ryukinix}, Manoel V. Machado (aka lerax)
   \item Johnny C. Marques
+  \item Manoel V. Machado (aka \emph{ryukinix})
+  \item Vitor V. Curtis
 \end{itemize}
