--- a/glossary.tex
+++ b/glossary.tex
@@ -39,4 +39,11 @@
     input and output variables in a dataset.}
 }
 
+\newglossaryentry{preprocessor}{%
+  name=preprocessor,
+  description={%
+    A chain of data handling operations that transforms the input data into a format that
+    is suitable for the model.}
+}
+
 \makeglossaries
