--- a/handling.tex
+++ b/handling.tex
@@ -441,7 +441,7 @@ We use the following terminology to refer to the data handling parameters:
 
 Filtering is the process of selecting a subset of rows from a dataset based on a
 predicate.  If more than a single predicate is used, they are combined using a logical
-operator, such as \texttt{AND} or \texttt{OR}.
+operator, such as logical disjunction (or) or logical conjunction (and).
 
 After filtering, the dataset will contain only the rows that satisfy the predicate.
 Columns remain unchanged.  This operation is potentially irreversible, as the removed
