--- a/project.tex
+++ b/project.tex
@@ -966,8 +966,8 @@ operations that use statistics/information of a sampling of the data are perform
 together with modeling --- consult \cref{chap:handling}.
 
 This approach not only improves reliability of the solution validation, but also improves
-maintenance of the solution.  (Not surprisingly, frameworks like \texttt{scikit-learn} and
-\texttt{tidymodels} have an object that allows the user to combine data preprocessing and
+maintenance of the solution.  (Not surprisingly, frameworks like \textit{scikit-learn} and
+tidymodels have an object that allows the user to combine data preprocessing and
 model training.)
 
 % TODO: in the future, when we have a monitoring chapter or similar:
