Quality of life in QR codes.

--- a/about.tex
+++ b/about.tex
@@ -56,11 +56,11 @@ Hope you enjoy the reading.
 
 \vfill
 
-\begin{parwithqr}{https://leanpub.com/dsp}
+\begin{lparwithqr}{https://leanpub.com/dsp}
   However, if you like this book, consider buying the e-book version at
   \href{\aurl}{leanpub.com/dsp}.  Any amount you pay will help me to keep this book
   updated and to write new books.
-\end{parwithqr}
+\end{lparwithqr}
 
 \vfill
 
@@ -72,10 +72,10 @@ Hope you enjoy the reading.
 
 \vfill
 
-\begin{parwithqr}{https://comp.ita.br/\~verri/dsp-book-print}
+\begin{lparwithqr}{https://comp.ita.br/\~verri/dsp-book-print}
   Students can find a printable version (A4 paper, double-sided, short-edge spiral
   binding) of this book at \href{\aurl}{comp.ita.br/\textasciitilde{}verri/dsp-book-print}.
-\end{parwithqr}
+\end{lparwithqr}
 
 \vfill
 
