Removing ugly links.

--- a/history.tex
+++ b/history.tex
@@ -193,7 +193,8 @@ and that the domain expertise should be considered in the analysis.
 Be aware that scientific literature has no consensus on the definition of data science, and it is still considered
 by some to be a buzzword\footnote{Press, Gil. ``Data Science: What's The Half-Life of a
 Buzzword?''. Forbes. Available at
-\url{https://www.forbes.com/sites/gilpress/2013/08/19/data-science-whats-the-half-life-of-a-buzzword/}}.
+\href{https://www.forbes.com/sites/gilpress/2013/08/19/data-science-whats-the-half-life-of-a-buzzword/}%
+  {forbes.com/sites/gilpress/2013/08/19/data-science-whats-the-half-life-of-a-buzzword}.}.
 
 Most of the usages of the term in literature and in the media are either a rough
 reference to a set of data-driven techniques or a marketing strategy.  Naur
@@ -449,7 +450,7 @@ processing capabilities enabled organizations to handle and analyze massive volu
 data.
 
 Currently, Google holds a patent for
-MapReduce\footnote{\url{http://static.googleusercontent.com/media/research.google.com/es/us/archive/mapreduce-osdi04.pdf}}.
+MapReduce\footfullcite{Dean2008}.
 However, their framework inherits from the architeture proposed in
 \textcite{Hillis1985}\footfullcite{Hillis1985} thesis.
 MapReduce is not particularly novel, but its simplicity and scalability made it popular.
