--- a/references.bib
+++ b/references.bib
@@ -515,3 +515,18 @@ isbn="978-3-319-17091-6"
   pages={321--357},
   year={2002}
 }
+
+@article{Dean2008,
+author = {Dean, Jeffrey and Ghemawat, Sanjay},
+title = {MapReduce: simplified data processing on large clusters},
+year = {2008},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {51},
+number = {1},
+issn = {0001-0782},
+doi = {10.1145/1327452.1327492},
+journal = {Commun. ACM},
+month = jan,
+pages = {107–113},
+}
